# notiflex-platform

./: .gitignore  AGENTS.md  CLAUDE.md  JOURNEY.md  README.md
.claude/commands/: update-docs.md
.github/workflows/: ci.yaml
app/: .gcloudignore  Dockerfile  conftest.py  main.py  pyproject.toml
app/tests/: test_main.py
argocd/: notiflex-smb.yaml
docs/: architecture-decisions.md
docs/agent-workflows/: update-docs.md
docs/superpowers/plans/: 2026-07-05-dockerfile.md  2026-07-05-health-id-api.md  2026-07-05-k8s-manifests.md
docs/superpowers/specs/: 2026-07-05-dockerfile-design.md  2026-07-05-health-id-api-design.md  2026-07-05-k8s-manifests-design.md
helm-values/: fluent-bit.yaml  kube-prometheus.yaml  loki.yaml  valkey.yaml
k8s/monitoring/: loki-datasource.yaml  notiflex-dashboard.yaml  pod-restart-alert.yaml
k8s/smb/: deployment.yaml  gateway.yaml  pdb.yaml  rollout.yaml  secretproviderclass.yaml  service-preview.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
